##
 # ----------------------------------------------------------------------------------
 #     系统名称: 列控设备动态监测系统 
 #       文件名: CMakeLists.txt
 #
 #       版本号: 1.0
 #     创建日期: 2014年08月20日 10时49分54秒
 #
 #         作者: lixianghui (rocklee), lxkjlxh@yahoo.com.cn
 #  Copyright (c),  2006 - 2014, 河南蓝信科技有限公司 版权所有.
 #
 #
 #     修改历史:   none
 #
 # ----------------------------------------------------------------------------------
 ##

add_subdirectory(dataswitch)
add_subdirectory(maintainservice)
add_subdirectory(corebusiness)
add_subdirectory(transportctrl)
add_subdirectory(storeservice)
add_subdirectory(eoaservice)
add_subdirectory(gnetmonitor)
add_subdirectory(procmonitor)
